--- a/ValsBurekAdventures/ValsBurekAdventures/ValsBurekAdventures.vbproj
+++ b/ValsBurekAdventures/ValsBurekAdventures/ValsBurekAdventures.vbproj
@@ -160,5 +160,8 @@
   <ItemGroup>
     <None Include="Resources\Platforma.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Burek.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
